fix z-index bug

--- a/common/common.scss
+++ b/common/common.scss
@@ -642,7 +642,7 @@ nav.post-controls .actions > button.reply:last-child * {
         height: 60px;
         right: 20px;
         bottom: 30px;
-        z-index: 1;
+        z-index: 2;
         box-shadow: var(--float-btn-shadow);
     }
     #create-topic.btn-default .d-button-label {
